##################################################
## Project
##################################################
project(Tests)

##################################################
## Prerequisites
##################################################

# Create PLTests directory
file(MAKE_DIRECTORY ${PL_BIN_DIR}/PLTests)

##################################################
## Target
##################################################
add_custom_target(Tests)

##################################################
## Projects
##################################################
add_subdirectory(PLTest)
add_subdirectory(PLTestBase)

##################################################
## Dependencies
##################################################
add_dependencies(PixelLight Tests)
